--- a/index.html
+++ b/index.html
@@ -32,36 +32,37 @@
 <br>
 <br>
 <br>
-    <form id="form1">
-      <h3>Get largest number</h3>
-      <div id="getLargeNum"></div>
-        First number: <input type="number" id="num1">
-        Second number: <input type="number" id="num2">
-      <br>
-<button id="determine1">Determine</button>
-Largest number is:<div id="output1"></div>
+<div class="container-fluid">
+          <form id="form1" class="form-horizontal">
+            <h3>Get largest number</h3>
+            <div id="getLargeNum"></div>
+              First number: <input type="number" id="num1">
+              Second number: <input type="number" id="num2">
+            <br>
+      <button id="determine1">Determine</button>
+      Largest number is:<div id="output1"class = "form-control"></div>
 
-    </form>
+          </form>
 
-    <form id="form2">
-      <h3>Find shortest word</h3>
-      <div>
-        Enter first word: <input id="word1"></input>
-      </div>
-      <div>
-        Enter second word: <input id="word2"></input>
-      </div>
-      <button id="det2">Determine</button>
-      Shortest word: <div id="output2"></div>
-      </form>
+          <form id="form2" class="form-horizontal">
+            <h3>Find shortest word</h3>
+            <div>
+              Enter first word: <input id="word1"></input>
+            </div>
+            <div>
+              Enter second word: <input id="word2"></input>
+            </div>
+            <button id="det2">Determine</button>
+            Shortest word: <div id="output2" class = "form-control"></div>
+            </form>
 
-<form id="form3">
-  <h3>Roll polyhydral dice</h3>
-  <div>Sides:<input id="sides" type ="number"></input> Number of dice:<input id="numDice" type="number"></inpuit><button>roll </button> </div>
-  <br>
-  Results: <div id="output3"></div>
-  </form>
-
+      <form id="form3" class="form-inline">
+        <h3>Roll polyhydral dice</h3>
+        <div>Sides:<input id="sides" type ="number"class ="form-control"></input> Number of dice:<input id="numDice" type="number"></inpuit><button>roll </button> </div>
+        <br>
+        Results: <div id="output3" class="form-control"></div>
+        </form>
+</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
   </body>
