added typescript updated files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css"/>
 
-    <script src="script.js" charset="utf-8"></script>
+    
   </head>
   <body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -40,7 +40,7 @@
               Second number: <input type="number" id="num2">
             <br>
       <button id="determine1">Determine</button>
-      Largest number is:<div id="output1"class = "form-control"></div>
+      Largest number is:<div id="output1" class = "form-control"></div>
 
           </form>
 
@@ -65,5 +65,7 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
+<script src="script.js" charset="utf-8"></script>
+<script src= "app.js"></script>
   </body>
 </html>
